# poker-postflop-solver

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
equity-engine/: Cargo.toml
equity-engine/benches/: equity_bench.rs
equity-engine/docs/: tauri-commands.md
equity-engine/src/: commands.rs  engine.rs  gto.rs  gto_solver.rs  gto_strategy.rs  hand_eval.rs  lib.rs  notation.rs  position_engine.rs  postflop.rs  postflop_solver.rs  preflop.rs  range.rs  ranges.rs  strategy_v2.rs  suggestion.rs
equity-engine/strategies/gto_wizard/: opening_hero_1_utg.json  opening_hero_2_utg+1.json  opening_hero_3_lj.json  opening_hero_4_hj.json  opening_hero_5_co.json  opening_hero_6_btn.json  opening_hero_7_sb.json  opening_hero_8_bb.json  voluntary_against_3b_hero_3_lj.json  voluntary_against_3b_hero_4_hj.json  voluntary_against_3b_hero_5_co.json  voluntary_against_3b_hero_6_btn.json  voluntary_against_3b_hero_7_sb.json  voluntary_against_3b_hero_8_bb.json  vs_3bet_from_bb_hero_1_utg_open.json  vs_3bet_from_bb_hero_2_utg+1_open.json  vs_3bet_from_bb_hero_3_lj_open.json  vs_3bet_from_bb_hero_4_hj_open.json  vs_3bet_from_bb_hero_5_co_open.json  vs_3bet_from_bb_hero_6_btn_open.json  vs_3bet_from_bb_hero_7_sb_open.json  vs_3bet_from_btn_hero_1_utg_open.json  vs_3bet_from_btn_hero_2_utg+1_open.json  vs_3bet_from_btn_hero_3_lj_open.json  vs_3bet_from_btn_hero_4_hj_open.json  vs_3bet_from_btn_hero_5_co_open.json  vs_3bet_from_co_hero_1_utg_open.json  vs_3bet_from_co_hero_2_utg+1_open.json  vs_3bet_from_co_hero_3_lj_open.json  vs_3bet_from_co_hero_4_hj_open.json  vs_3bet_from_hj_hero_1_utg_oepn.json  vs_3bet_from_hj_hero_2_utg+1_open.json  vs_3bet_from_hj_hero_3_lj_open.json  vs_3bet_from_lj_hero_1_utg_open.json  vs_3bet_from_lj_hero_2_utg+1_open.json  vs_3bet_from_sb_hero_1_utg_open.json  vs_3bet_from_sb_hero_2_utg+1_open.json  vs_3bet_from_sb_hero_3_lj_open.json  vs_3bet_from_sb_hero_4_hj_open.json  vs_3bet_from_sb_hero_5_co_open.json  (+29 more)
equity-engine/tests/: integration.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+299 files in other folders)
