[package]
name = "equity-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "equity_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hand evaluation + range vs range equity (multithreaded Monte Carlo)
pokers = "0.2"
# Serialization for range profiles and Tauri command I/O
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured logging
log = "0.4"
# Platform directory paths
dirs = "5"
# GTO solver — optional, off by default (large dep, requires network on first build)
# bincode feature disabled: we solve at runtime, don't need save/load
postflop-solver = {
    git = "https://github.com/b-inary/postflop-solver",
    default-features = false,
    features = ["rayon"],
    optional = true
}
# Tauri integration (optional feature so lib is usable standalone too)
tauri = { version = "2", optional = true }

[features]
default = []
tauri = ["dep:tauri"]
gto-solver = ["dep:postflop-solver"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "equity_bench"
harness = false
