[package]
name = "poker-postflop-solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_postflop_solver_lib"
crate-type = ["staticlib","cdylib","rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
